fix the refreshing product page issue , redirect issue , siplitings settings tab menu  to two sub collapsbles

--- a/src/components/common/Inputs/style.css
+++ b/src/components/common/Inputs/style.css
@@ -965,6 +965,25 @@ input.text-input-filed:focus {
 /* TEXT FIELD STYLES START ENDS */
 
 
+.text-input-filed-container .currency-label + .text-input-filed {
+    padding-left:45px; 
+}
+
+.currency-label {
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    top: 0px;
+    background: var(--primary-color);
+    color: var(--header-color);
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 40px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
 
 
 
